my/target/test/cgdb-scan/2022-04-21-065944-59144-1/failures/clang_other_error_hpFhro.ii.stderr.txt
test/cc/libevent_client.cc:19:9: fatal error: 'event.h' file not found
#include<event.h>  
        ^~~~~~~~~
1 error generated.
